--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -2,7 +2,7 @@
   text-transform: uppercase;
 }
 
-#contact, #alright {
+#contact {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,11 +10,4 @@
   margin: 0;
   padding: 0;
   gap: 1rem;
-}
-
-#timeline {
-  display: flex;
-  align-content: flex-start;
-  align-items: flex-start;
-  justify-content: flex-start;
 }
