--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,13 +1,10 @@
-#header, #career {
-  text-transform: uppercase;
+.Home {
+  padding: 1rem 2rem 1rem 2rem;
+}
+.textBold {
+  font-weight: 550;
 }
 
-#contact {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
-  gap: 1rem;
+h1 {
+  color: #0984e3;
 }
