--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ html, body {
 
 .App {
   width: 100%;
+  background-color: #355268;
   background-image: url("./assets/bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
