--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,13 @@ html, body {
 
 .App {
   width: 100%;
-  background-color: #355268;
+  background-color: white;
+  /* background-color: #355268;
   background-image: url("./assets/bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
-}
+  background-attachment: fixed;*/
+} 
 
 #footer {
   text-align: center;
